Sales Order Details update

--- a/Finsys/templates/app1/customers.html
+++ b/Finsys/templates/app1/customers.html
@@ -116,7 +116,6 @@ body{
                     <a href="{% url 'goaddcust' %}" id="myBtn" class="btn btn-outline-info text-grey fas fa-plus" style="width: 40%; margin-top: 8px;" role="button"> Add Customer</a>
                 </div>
             </div>
-
             <div class="container-fluid">
                 <table class="table table-responsive-md mt-4 table-hover text-center" id="tbl_exporttable_to_xls">
                     <thead>
@@ -130,7 +129,7 @@ body{
                             <th>BALANCE</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="cust_table_body">
                         {% for customer in customers %}
                             {% if customer.cid_id == cmp1.cid %}
                                 <tr  class="table-row clickable-row text-center" data-href="customer_profile/{{ customer.customerid }}">
@@ -141,6 +140,7 @@ body{
                                     <td>{{customer.opening_balance}}</td>
                                     <td>{{customer.status}}</td>
                                     <td></td>
+                                    <td style="display: none;">{{ customer.customerid }}</td>
                                 </tr>
                             {% endif %}
                         {% endfor %}
@@ -151,6 +151,26 @@ body{
     </div>
 </div>
 <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+
+<script>
+    item_table_rows = document.getElementById('cust_table_body').querySelectorAll('tr')
+    for(let i= 0; i<item_table_rows.length;i++){
+        name = item_table_rows[i].getElementsByTagName("td")[0].innerText
+        id = item_table_rows[i].getElementsByTagName("td")[7].innerText
+        $.ajax({
+            type: "GET",
+            url: "{% url 'balancedata' %}",
+            data: {
+                id: id,
+                name:name
+            },
+            success: function (response) {
+                final_bal=response.final_bal
+                item_table_rows[i].getElementsByTagName("td")[6].innerText = final_bal
+            }
+        });
+    }
+</script>
 
 <script>
 
