--- a/Finsys/templates/app1/edit_sales_order.html
+++ b/Finsys/templates/app1/edit_sales_order.html
@@ -2495,6 +2495,24 @@
 
 
 <script>
+    $(document).on('change','#Salesdate', function() {
+        var days = parseInt($('#pay_term').val());
+        order_date =new Date( document.getElementById("Salesdate").value)
+        if (!isNaN(order_date.getTime())) {
+            // Calculate the new date by adding 20 days
+            const endDate = new Date(order_date);
+            endDate.setDate(endDate.getDate() + days);
+            // Format the new date as YYYY-MM-DD
+            const formattedDate = endDate.toISOString().split("T")[0];
+            // Set the result in the second input
+            document.getElementById("Shipmentdate").value = formattedDate;
+        } else {
+                alert("Please enter a valid date.");
+        }
+    })
+</script>
+
+<script>
     $(document).ready(function() {
     item_table_rows = document.getElementById('items-table-body').querySelectorAll('tr')
     
